src/objects/Holiday_Form__c.object
<CustomObject>
    <description>For use with HR salesforce</description>
    <fields>
        <fullName>Annual_leave_taken_on_this_occasion__c</fullName>
        <label>Annual leave taken on this occasion</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cover_in_my_absence__c</fullName>
        <label>Cover in my absence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_annual_leave_finishes__c</fullName>
        <label>Date annual leave finishes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_annual_leave_starts__c</fullName>
        <label>Date annual leave starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holiday_year__c</fullName>
        <label>Holiday year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <referenceTo>Staff_Member__c</referenceTo>
        <relationshipLabel>Holiday Forms</relationshipLabel>
        <relationshipName>Holiday_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awaiting approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Holiday Form</label>
    <nameField>
        <label>Holiday form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>